# ml_agentic_optimizer

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agent/: AGENTS.md  mcp-config.json
auth/: aml_env.md  read_local_token.ps1
docker/: Dockerfile.broker  Dockerfile.node  README.md
docs/: architecture.md
examples/: agent_sim.py  aml_job.yml  aml_job_selfhost.yml  cifar10_resnet.py  live_demo.py  minimal_bridge.py  run_broker.py  selfhost_and_train.py  train_with_bridge.py
src/agentic_optimizer/: __init__.py  bridge.py  callback.py  contract.py  controlplane.py  distributed.py  driver.py  mcp_server.py  optuna_advisor.py  profiling.py  safety.py  telemetry.py  tunnel.py
src/agentic_optimizer/integrations/: __init__.py  hf.py  lightning.py
tests/: test_bridge.py  test_bridge_control.py  test_callback.py  test_contract.py  test_controlplane.py  test_distributed.py  test_driver_mock.py  test_integration.py  test_integrations.py  test_mcp_tools.py  test_optuna_advisor.py  test_profiling.py  test_safety.py  test_telemetry.py  test_tunnel.py
